<?xml version="1.0"?>
<package>
  <name>cmake_node_hook</name>
  <version>0.0.1</version>
  <description>
    Cmake macros to invoke npm update
  </description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/cmake_node_hook</url>
  <url type="repository">https://github.com/jihoonl/cmake_node_hook</url>
  <url type="bugtracker">https://github.com/jihoonl/cmake_node_hook/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodejs</build_depend>
  <run_depend>nodejs</run_depend>
</package>
